Fixed overflow issue on small screens

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -95,6 +95,7 @@
   }
 
   .hero-container.right .background {
-    left: -40vw;
+    transform: translateZ(-10px) scale(2.12);
+    left: -30vw;
   }
 }
